tests/negative/Internal/DefaultTypeError.juvix
module DefaultTypeError;

type T := mkT;

type U := mkU;

g {a : T := mkU} : T := a;
